--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
         <meta name="keywords" content="jasa service ac jakarta selatan, Service ac & jual beli ac,service ac, ac macet, ac nggak dingin, servis, service, perbaikan ac, perbaikan, terdekat, cara, cara mengatasi ac bocor, cara mengatasi ac tidak menyala, Jasa Service AC di Jakarta Selatan, service ac kebayoran lama selatan, Service Frezeer, Service Kulkas, Service AC, Service ac cibubur, service ac jakarta selatan fatmawati, Bongkar pasang ac, Service AC Fatmawati, Service AC Kebayoran, service ac jakarta selatan, jasa ac jakarta selatan, jasa service ac kebayoran lama
   ">
         <meta name="keywords" content="Jasa Servis AC Profesional di Jatinegara, Tambah Freon AC Terpercaya Di Cakung, Tambah Freon AC Terpercaya Di Jatinegara, Jasa Tambah Freon AC Terpercaya Area Jatinegara, Tambah Freon AC Terpercaya Di Jatinegara Professional, Jasa Servis AC Profesional Area Jatinegara, Jasa Perbaikan AC Terpercaya Di Cakung, Jasa Servis AC Profesional Di Cakung, Jasa Service AC Area Jakarta Timur Yang Terdekat, Jasa Servis AC Di Cakung, Jasa Servis AC Area Jakarta Timur, Jasa Servis AC Profesional Di Jatinegara, Jasa Service AC Rumah Profesional Di Jaktim, Jasa Tambah Freon AC Terpercaya Area Jakarta Timur, Jasa Service AC / Tukang AC Bergaransi Area Jakarta Timur, Jasa Service AC Bergaransi Area Cakung, Jasa Service AC Area Jakarta Timur, Jasa Pasang AC Terpercaya Area Jatinegara, Jasa Service AC Area Cakung, Jasa Service AC Area Jaktim">
-        <link rel="shortcut icon" type="image/x-icon" href="https://rekateknik.github.io/assets/img/logo/favicon-reka.png"/>
+        <link rel="shortcut icon" type="image/x-icon" href="http://rekateknik.my.id/assets/img/logo/favicon-reka.png"/>
         <title>Reka Teknik Service AC Jasa Service AC Jabodetabek | Terpercaya, Berpengalaman serta Bergaransi</title>
         <!-- google Font -->
         <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap" rel="stylesheet"/>
         <!-- css styles -->
-        <link rel="stylesheet" href="https://rekateknik.github.io/assets/css/owl.carousel.min.css"/>
-        <link rel="stylesheet" href="https://rekateknik.github.io/assets/css/icofont.min.css"/>
-        <link rel="stylesheet" href="https://rekateknik.github.io/assets/css/owl.theme.default.min.css"/>
-        <link rel="stylesheet" href="https://rekateknik.github.io/assets/css/featherlight.min.css"/>
-        <link rel="stylesheet" href="https://rekateknik.github.io/assets/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="https://rekateknik.github.io/assets/css/style.css"/>
+        <link rel="stylesheet" href="http://rekateknik.my.id/assets/css/owl.carousel.min.css"/>
+        <link rel="stylesheet" href="http://rekateknik.my.id/assets/css/icofont.min.css"/>
+        <link rel="stylesheet" href="http://rekateknik.my.id/assets/css/owl.theme.default.min.css"/>
+        <link rel="stylesheet" href="http://rekateknik.my.id/assets/css/featherlight.min.css"/>
+        <link rel="stylesheet" href="http://rekateknik.my.id/assets/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="http://rekateknik.my.id/assets/css/style.css"/>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <!-- End Global site tag -->
     </head>
@@ -524,12 +524,12 @@
         <div class="scroll-top">
             <i class="icofont-rounded-up"></i>
         </div>
-        <script src="https://rekateknik.github.io/assets/js/jquery-3.3.1.slim.min.js"></script>
-        <script src="https://rekateknik.github.io/assets/js/popper.min.js"></script>
-        <script src="https://rekateknik.github.io/assets/js/bootstrap.min.js"></script>
-        <script src="https://rekateknik.github.io/assets/js/owl.carousel.min.js"></script>
-        <script src="https://rekateknik.github.io/assets/js/featherlight.min.js"></script>
-        <script src="https://rekateknik.github.io/assets/js/main.js"></script>
+        <script src="http://rekateknik.my.id/assets/js/jquery-3.3.1.slim.min.js"></script>
+        <script src="http://rekateknik.my.id/assets/js/popper.min.js"></script>
+        <script src="http://rekateknik.my.id/assets/js/bootstrap.min.js"></script>
+        <script src="http://rekateknik.my.id/assets/js/owl.carousel.min.js"></script>
+        <script src="http://rekateknik.my.id/assets/js/featherlight.min.js"></script>
+        <script src="http://rekateknik.my.id/assets/js/main.js"></script>
         <!--  get data google review -->
         <link rel="stylesheet" href="https://cdn.rawgit.com/stevenmonson/googleReviews/master/google-places.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
